# BetterGrader

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
crates/grading-core/: Cargo.toml
crates/grading-core/src/: db.rs  export.rs  fake.rs  grading.rs  ingest.rs  label.rs  lib.rs  models.rs  persist.rs  schema.sql  setup.rs
docs/: 01-设计哲学.md  02-架构与模块.md  03-使用手册.md  README.md  plan-v0.1-baseline.md
docs/superpowers/plans/: 2026-07-02-阅卷辅助器-foundation-m0-m1.md  2026-07-02-阅卷辅助器-persistence-export-m3.md  2026-07-03-阅卷辅助器-ingest-label-m4-m2.md  2026-07-03-阅卷辅助器-pdf-import-comments.md
docs/superpowers/specs/: 2026-07-02-阅卷辅助器-design.md  2026-07-03-阅卷辅助器-ingest-label-实现设计.md
src/: App.vue  api.ts  errors.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/: GradeSidebar.vue
src/composables/: useGradeKeys.test.ts  useGradeKeys.ts  useImage.ts  useLabelKeys.test.ts  useLabelKeys.ts  usePdf.ts  useZoomPan.ts
src/views/: ExportView.vue  GradeView.vue  LabelView.vue  SetupView.vue
